refactor: Remove duplicate fields from DbPublication